tests/baselines/reference/preserveValueImports_mixedImports.errors.txt
error TS5102: Option 'preserveValueImports' has been removed. Please remove it from your configuration.
  Use 'verbatimModuleSyntax' instead.
/index.ts(1,21): error TS1444: 'ComponentProps' is a type and must be imported using a type-only import when 'preserveValueImports' and 'isolatedModules' are both enabled.


!!! error TS5102: Option 'preserveValueImports' has been removed. Please remove it from your configuration.
!!! error TS5102:   Use 'verbatimModuleSyntax' instead.
==== /exports.ts (0 errors) ====
    export function Component() {}
    export interface ComponentProps {}
    
==== /index.ts (1 errors) ====
    import { Component, ComponentProps } from "./exports.js";
                        ~~~~~~~~~~~~~~
!!! error TS1444: 'ComponentProps' is a type and must be imported using a type-only import when 'preserveValueImports' and 'isolatedModules' are both enabled.
    
==== /index.fixed.ts (0 errors) ====
    import { Component, type ComponentProps } from "./exports.js";
    